SFUSA/force-app/main/default/objects/Barrel__c/fields/Account_Name__c.field-meta.xml
<CustomField>
        <fullName>Account_Name__c</fullName>
        <formula>Case__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </CustomField>