SFUSA/force-app/main/default/objects/Barrel__c/fields/Amount__c.field-meta.xml
<CustomField>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </CustomField>