SFUSA/force-app/main/default/objects/Barrel__c/fields/Baked_American_Pure_2__c.field-meta.xml
<CustomField>
        <fullName>Baked_American_Pure_2__c</fullName>
        <formula>Barrel_Recipe__r.Baked_American_Pure_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baked American Pure 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>