SFUSA/force-app/main/default/objects/Barrel__c/fields/Barrel_Registration_Requested__c.field-meta.xml
<CustomField>
        <fullName>Barrel_Registration_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Certain barrels will need to be sent to compliance to be registered depending on the proof of the barrel.  This field indicates that an email was sent to compliance</description>
        <label>Barrel Registration Requested</label>
        <type>Checkbox</type>
    </CustomField>