SFUSA/force-app/main/default/objects/Barrel__c/fields/Barreled_Date__c.field-meta.xml
<CustomField>
        <fullName>Barreled_Date__c</fullName>
        <description>The date when the liquid was originally put into the barrel</description>
        <inlineHelpText>The date when the liquid was originally put into the barrel</inlineHelpText>
        <label>Barreled Date</label>
        <type>Date</type>
    </CustomField>