SFUSA/force-app/main/default/objects/Barrel__c/fields/Distributor__c.field-meta.xml
<CustomField>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Barrels</relationshipLabel>
        <relationshipName>Barrels</relationshipName>
        <type>Lookup</type>
    </CustomField>