SFUSA/force-app/main/default/objects/Barrel__c/fields/Expected_Ship_Date__c.field-meta.xml
<CustomField>
        <fullName>Expected_Ship_Date__c</fullName>
        <label>Expected Ship Date</label>
        <type>Date</type>
    </CustomField>