SFUSA/force-app/main/default/objects/Barrel__c/fields/Floor__c.field-meta.xml
<CustomField>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Warehouse__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Floor</valueSetName>
        </valueSet>
    </CustomField>