SFUSA/force-app/main/default/objects/Barrel__c/fields/Lay_Down_Date__c.field-meta.xml
<CustomField>
        <fullName>Lay_Down_Date__c</fullName>
        <description>Date when the barrel was laid down</description>
        <label>Lay Down Date</label>
        <type>Date</type>
    </CustomField>