SFUSA/force-app/main/default/objects/Barrel__c/fields/Order_Shipped__c.field-meta.xml
<CustomField>
        <fullName>Order_Shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Shipped</label>
        <type>Checkbox</type>
    </CustomField>