SFUSA/force-app/main/default/objects/Barrel__c/fields/PO_Number__c.field-meta.xml
<CustomField>
        <fullName>PO_Number__c</fullName>
        <externalId>true</externalId>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>