SFUSA/force-app/main/default/objects/Barrel__c/fields/Proof__c.field-meta.xml
<CustomField>
        <fullName>Proof__c</fullName>
        <label>Proof</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>