SFUSA/force-app/main/default/objects/Barrel__c/fields/Seared_French_Cuvee__c.field-meta.xml
<CustomField>
        <fullName>Seared_French_Cuvee__c</fullName>
        <formula>Barrel_Recipe__r.Seared_French_Cuvee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seared French Cuvee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>