SFUSA/force-app/main/default/objects/Barrel__c/fields/Selection_Date__c.field-meta.xml
<CustomField>
        <fullName>Selection_Date__c</fullName>
        <label>Selection Date</label>
        <type>Date</type>
    </CustomField>