SFUSA/force-app/main/default/objects/Barrel__c/fields/SKU_Entered_Date__c.field-meta.xml
<CustomField>
        <fullName>SKU_Entered_Date__c</fullName>
        <label>SKU Entered Date</label>
        <type>DateTime</type>
    </CustomField>