SFUSA/force-app/main/default/objects/Barrel__c/fields/State__c.field-meta.xml
<CustomField>
        <fullName>State__c</fullName>
        <formula>Case__r.Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </CustomField>