SFUSA/force-app/main/default/objects/Barrel__c/fields/Story__c.field-meta.xml
<CustomField>
        <fullName>Story__c</fullName>
        <label>Story</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Warehouse__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Story</valueSetName>
        </valueSet>
    </CustomField>