SFUSA/force-app/main/default/objects/Barrel__c/fields/Tier__c.field-meta.xml
<CustomField>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tier</valueSetName>
        </valueSet>
    </CustomField>