SFUSA/force-app/main/default/objects/Barrel__c/fields/Toasted_French_Spice__c.field-meta.xml
<CustomField>
        <fullName>Toasted_French_Spice__c</fullName>
        <formula>Barrel_Recipe__r.Toasted_French_Spice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Toasted French Spice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>