SFUSA/force-app/main/default/objects/Barrel__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>