SFUSA/force-app/main/default/objects/Barrel__c/fields/Warehouse__c.field-meta.xml
<CustomField>
        <fullName>Warehouse__c</fullName>
        <label>Warehouse</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brand__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Warehouse</valueSetName>
        </valueSet>
    </CustomField>