SFUSA/force-app/main/default/objects/Barrel__c/recordTypes/Cruzan_Sample_Kit.recordType-meta.xml
<RecordType>
        <fullName>Cruzan_Sample_Kit</fullName>
        <active>true</active>
        <label>Cruzan - Sample Kit</label>
    </RecordType>