SFUSA/force-app/main/default/objects/Barrel__c/recordTypes/El_Tesoro_Remote_Selection.recordType-meta.xml
<RecordType>
        <fullName>El_Tesoro_Remote_Selection</fullName>
        <active>true</active>
        <label>El Tesoro - Remote Selection</label>
    </RecordType>