SFUSA/force-app/main/default/objects/Barrel__c/recordTypes/Jim_Beam_Full_Barrel.recordType-meta.xml
<RecordType>
        <fullName>Jim_Beam_Full_Barrel</fullName>
        <active>true</active>
        <label>Jim Beam - Full Barrel</label>
    </RecordType>