SFUSA/force-app/main/default/objects/Barrel__c/recordTypes/Jim_Beam_Sample_Kit.recordType-meta.xml
<RecordType>
        <fullName>Jim_Beam_Sample_Kit</fullName>
        <active>true</active>
        <label>Jim Beam - Sample Kit</label>
    </RecordType>