SFUSA/force-app/main/default/objects/Barrel__c/recordTypes/Knob_Creek_Full_Barrel.recordType-meta.xml
<RecordType>
        <fullName>Knob_Creek_Full_Barrel</fullName>
        <active>true</active>
        <label>Knob Creek - Full Barrel</label>
    </RecordType>