SFUSA/force-app/main/default/objects/Barrel__c/listViews/El_Tesoro_Single_Barrel_Barrel.listView-meta.xml
<ListView>
        <fullName>El_Tesoro_Single_Barrel_Barrel</fullName>
        <filterScope>Queue</filterScope>
        <label>El Tesoro - Single Barrel</label>
        <queue>El_Tesoro_Single_Barrel</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>